# phenotool

./: .gitmodules  .pkpheno.py.swp  README.md  phenotool.py  pkclick.py  pkcsv.py  pkpheno.py  pyproject.toml  setup.cfg
conda-recipe/: build.sh  meta.yaml
extras/phenotool/: 0.12.0  0.12.1  0.13.0
phenotool/: __init__.py  phenotool.py
src/cli/: __init__.py  derive.py  phenotool.py  ukbiobank.py  version.py
src/eastwood/: cli.py  eastwood.py
src/phenotool/: __init__.py  cli.py  epilog.py  options.py  phenotool.py  phenotype.py  plink.py  rvtest.py  snptest.py  stdcommand.py  textfile.py
src/pkpep/: pkpep.py
src/pkpheno/: __init__.py  pkpheno.py  textfile.py
src/ukbiobank/: cli.py  options.py  ukbiobank.py
