

[build-system]
requires = [
    "numpy>1.23",
    "pandas>2.0",
    "setuptools>=49",
    "wheel",
    "setuptools-scm",
]
build-backend = "setuptools.build_meta"


[project]
name = "phenotool"
authors = [
    { name = "Carsten Friis Rundsten", email = "carsten.rundsten@sund.ku.dk" },
]
description = "My package description"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GNU-GLPv3"}
dependencies = [
    "click>8.0",
    "pandas>2.0",
    "scipy>1.9",
]
dynamic = ["version"]

[project.scripts]
phenotool = "phenotool.cli:main"
ukbiobank = "ukbiobank.cli:ukbiobank"

[tool.setuptools.dynamic]
version = {attr = "phenotool.version.__version__ "}

