[metadata]
name = phenotool
version = 0.0.1
author = Carsten Rundsten
author_email = carsten.rundten@sund.ku.dk
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/carsten0202/phenotool
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    main = phenotool:main

